--- a/fod/lineage.biometrics.fingerprint.inscreen@1.0-service.xiaomi_davinci.rc
+++ b/fod/lineage.biometrics.fingerprint.inscreen@1.0-service.xiaomi_davinci.rc
@@ -1,8 +1,8 @@
 on boot
-    chown system system /sys/devices/platform/soc/soc:qcom,dsi-display/hbm
+    chown system system /sys/class/drm/card0-DSI-1/disp_param
     chown system system /sys/devices/virtual/touch/tp_dev/fod_status
 
-    chmod 0644 /sys/devices/platform/soc/soc:qcom,dsi-display/hbm
+    chmod 0644 /sys/class/drm/card0-DSI-1/disp_param
     chmod 0644 /sys/devices/virtual/touch/tp_dev/fod_status
 
 service fingerprint-inscreen-1-0 /system/bin/hw/lineage.biometrics.fingerprint.inscreen@1.0-service.xiaomi_davinci
